<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.btranz.ecommerceapp.fragment.HomeFragment"
    android:background="@color/color_text">

   <!-- <LinearLayout
        android:id="@+id/progress_ll"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
           />
    </LinearLayout>-->
   <!-- <android.support.v7.widget.RecyclerView
        android:id="@+id/glance_horizontal_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >
    <LinearLayout
        android:id="@+id/img_slideshout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >


   <LinearLayout
        android:id="@+id/img_slideshow_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"

        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            >

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="des"
                android:clipToPadding="false"
                android:scaleType="fitXY"

                />
<!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#88343434"
                android:layout_gravity="top">
                <TextView
                    android:id="@+id/img_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:ellipsize="end"
                    android:text="hai"
                    android:paddingBottom="2dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="2dp"
                    android:paddingTop="2dp"
                    android:singleLine="true"
                    android:textColor="#ededed" />
            </LinearLayout>
-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom">
            <com.btranz.ecommerceapp.utils.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                />
        </LinearLayout>
        </FrameLayout>




   </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_glance"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:id="@+id/glance_txt" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:id="@+id/glance_progress_ll"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                />
        </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="2dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/glance_horizontal_recycler"
                android:layout_width="match_parent"
                android:layout_height="230dp" />
            <!-- <Gallery
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:gravity="start"
                 android:spacing="1dip"
                 android:id="@+id/grid"
                 />-->
         <!--   <org.lucasr.twowayview.TwoWayView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/grid"
                style="@style/TwoWayView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="false"
                tools:context=".MainActivity" />-->
            <!--<ListView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/grid"
                />-->
      </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/pdt_name_title"
            android:background="@color/view_divider_color" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="View All"
                android:textSize="10sp"
                android:padding="7dp"
                android:drawableRight="@drawable/next_checkout_btn"
                android:background="?attr/colorAccent"
                android:textColor="@color/color_text"
                android:id="@+id/glance_btn"

                android:gravity="center"
                android:layout_gravity="right"
                />
        </LinearLayout>


    </LinearLayout>

    </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/top_buys_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_prdts"
            android:gravity="left"
            android:layout_margin="8dp"
            android:textStyle="bold"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:id="@+id/pop_progress_ll"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="2dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/pop_horizontal_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="230dp" />
             <!--   <Gallery
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:spacing="1dip"
                    android:id="@+id/pop_grid"
                   />-->
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/pdt_name_title"
                android:background="@color/view_divider_color" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="View All"
                    android:textSize="10sp"
                    android:padding="7dp"
                    android:drawableRight="@drawable/next_checkout_btn"
                    android:background="?attr/colorAccent"
                    android:textColor="@color/color_text"
                    android:id="@+id/bestseller_btn"
                    android:layout_gravity="right"
                    />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_brand"
            android:gravity="left"
            android:layout_margin="8dp"
            android:textStyle="bold"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:id="@+id/progress_ll"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ProgressBar
                    android:id="@+id/progressbar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_margin="2dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <GridView
                        android:numColumns="auto_fit"
                        android:gravity="center"
                        android:columnWidth="100dp"
                        android:stretchMode="columnWidth"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/brand_grid"
                        />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/pdt_name_title"
                    android:background="@color/view_divider_color" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="View All"
                        android:textSize="10sp"
                        android:padding="7dp"
                        android:drawableRight="@drawable/next_checkout_btn"
                        android:background="?attr/colorAccent"
                        android:textColor="@color/color_text"
                        android:id="@+id/brand_btn"
                        android:layout_gravity="right"
                        />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>
    <!-- <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView"
         android:layout_weight="1"
         android:scrollbars="none"
         android:layout_gravity="center" >-->
    <!--</ScrollView>-->
        <!--  <TextView
          android:id="@+id/label"
          android:layout_alignParentTop="true"
          android:layout_marginTop="100dp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:textSize="45dp"
          android:text="HOME"
          android:textStyle="bold"/>

      <TextView
          android:layout_below="@id/label"
          android:layout_centerInParent="true"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="12dp"
          android:layout_marginTop="10dp"
          android:gravity="center_horizontal"
          android:text="Edit fragment_home.xml to change the appearance" />
  -->
    </LinearLayout>
</ScrollView >


</LinearLayout>